--- a/client/src/routes/profilePage/profilePage.scss
+++ b/client/src/routes/profilePage/profilePage.scss
@@ -52,7 +52,15 @@
           align-items: center;
           gap: 20px;
         }
-
+        
+        button{
+          width :100px;
+          background-color: teal;
+          color:white;
+          border:none;
+          padding:10px 20px;
+          cursor: pointer;
+        }
         img{
           width: 40px;
           height: 40px;
