--- a/client/src/components/Navbar/navbar.scss
+++ b/client/src/components/Navbar/navbar.scss
@@ -1,23 +1,37 @@
 @import "../../responsive.scss";
 
+$blue:  #317737;;
+$green: #43a047;
+$light-bg: #f0f8ff;
+$gray: #6b7280;
 
 nav {
   height: 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 98%;
-  margin:0 auto;
+  max-width: 1250px;
+  margin: 0 auto;
+  overflow: hidden;
+
+  @include md {
+    max-width: 98vw;
+    width: 98vw;
+    margin: 0 auto; 
+  }
 
   a {
-    transition: all 0.4s ease;
+    transition: all 0.3s ease;
+    font-weight: 500;
+    color: $gray;
+
+    &:hover {
+      color: $blue;
+      transform: scale(1.05);
+    }
 
     @include sm {
       display: none;
-    }
-
-    &:hover {
-      scale: 1.05;
     }
   }
 
@@ -25,92 +39,106 @@ nav {
     flex: 3;
     display: flex;
     align-items: center;
-    gap: 50px;
+    gap: 40px;
 
     .logo {
       font-weight: bold;
-      font-size: 20px;
+      font-size: 22px;
       display: flex;
       align-items: center;
       gap: 10px;
+      color: $blue;
 
       img {
-        width: 48px;
+        width: 58px;
       }
 
       span {
         @include md {
           display: none;
         }
-
         @include sm {
           display: initial;
         }
       }
     }
   }
+
   .right {
     flex: 2;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    background-color: #fcf5f3;
     height: 100%;
-
-    @include md {
-      background-color: transparent;
+    
+    .authButtons{
+      display: flex;
+      align-items: center;
+      justify-items: center;
     }
-
     a {
-      padding: 12px 24px;
-      margin: 30px;
+      padding: 10px 20px;
+      border-radius: 6px;
+      margin: 0 8px;
+
+      &:hover {
+        background-color: rgba($blue, 0.08);
+      }
     }
 
-    .user{
+    .user {
       display: flex;
       align-items: center;
       font-weight: bold;
 
-      img{
+      img {
         width: 40px;
         height: 40px;
         border-radius: 50%;
         object-fit: cover;
         margin-right: 10px;
+        border: 2px solid $blue;
       }
 
-      span{
-        @include sm{
-          display: none;
-        }
-      }
-
-      .profile{
-        padding: 12px 24px;
-        background-color: #fece51;
+      .profile {
+        padding: 10px 20px;
+        background-color: $green;
+        color: white;
         cursor: pointer;
+        border-radius: 6px;
         border: none;
         position: relative;
-        
-        .notification{
+        transition: all 0.3s ease;
+
+        &:hover {
+          background-color: darken($green, 5%);
+        }
+
+        .notification {
           position: absolute;
           top: -8px;
           right: -8px;
           background-color: red;
           color: white;
           border-radius: 50%;
-          width: 26px;
-          height: 26px;
+          width: 22px;
+          height: 22px;
+          font-size: 14px;
           display: flex;
           align-items: center;
           justify-content: center;
         }
-
       }
     }
 
     .register {
-      background-color: #fece51;
+      background-color: $green;
+      color: white;
+      font-weight: 600;
+
+      &:hover {
+        background-color: darken($green, 5%);
+      }
     }
 
     .menuIcon {
@@ -118,8 +146,8 @@ nav {
       z-index: 999;
 
       img {
-        width: 36px;
-        height: 36px;
+        width: 32px;
+        height: 32px;
         cursor: pointer;
       }
 
@@ -132,24 +160,31 @@ nav {
       position: absolute;
       top: 0;
       right: -50%;
-      background-color: black;
+      background-color: $blue;
       color: white;
       height: 100vh;
       width: 50%;
-      transition: all 1s ease;
+      transition: all 0.5s ease;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      font-size: 24px;
+      font-size: 20px;
+      display: none; 
+    
 
       &.active {
         right: 0;
+        display: block; 
       }
 
-      @include sm {
-        a {
-          display: initial;
+      a {
+        display: block;
+        margin: 15px 0;
+        color: white;
+
+        &:hover {
+          color: $green;
         }
       }
     }
