--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -1,120 +1,3 @@
-// .chat {
-//   height: 100%;
-//   display: flex;
-//   flex-direction: column;
-
-//   .messages {
-//     flex: 1;
-//     display: flex;
-//     flex-direction: column;
-//     gap: 20px;
-//     overflow-y: scroll;
-
-//     h1 {
-//       font-weight: 300;
-//     }
-
-//     .message {
-//       background-color: white;
-//       padding: 20px;
-//       border-radius: 10px;
-//       display: flex;
-//       align-items: center;
-//       gap: 20px;
-//       cursor: pointer;
-
-//       img {
-//         width: 40px;
-//         height: 40px;
-//         border-radius: 50%;
-//         object-fit: cover;
-//       }
-
-//       span {
-//         font-weight: bold;
-//       }
-//     }
-//   }
-
-//   .chatBox {
-//     flex: 1;
-//     background-color: white;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: space-between;
-
-//     .top {
-//       background-color: #f7c14b85;
-//       padding: 20px;
-//       font-weight: bold;
-//       display: flex;
-//       align-items: center;
-//       justify-content: space-between;
-
-//       .user {
-//         display: flex;
-//         align-items: center;
-//         gap: 20px;
-
-//         img {
-//           width: 30px;
-//           height: 30px;
-//           border-radius: 50%;
-//           object-fit: cover;
-//         }
-//       }
-//       .close {
-//         cursor: pointer;
-//       }
-//     }
-//     .center {
-//       height: 350px;
-//       overflow: scroll;
-//       padding: 20px;
-//       display: flex;
-//       flex-direction: column;
-//       gap: 20px;
-
-//       .chatMessage{
-//         width: 50%;
-
-//         &.own{
-//           align-self: flex-end;
-//           text-align: right;
-//         }
-
-//         span{
-//           font-size: 12px;
-//           background-color: #f7c14b39;
-//           padding: 2px;
-//           border-radius: 5px;
-//         }
-//       }
-//     }
-//     .bottom {
-//       border-top: 2px solid #f7c14b85;
-//       height: 60px;
-//       display: flex;
-//       align-items: center;
-//       justify-content: space-between;
-
-//       textarea{
-//         flex:3;
-//         height: 100%;
-//         border: none;
-//         padding: 20px;
-//       }
-
-//       button{
-//         flex:1;
-//         background-color: #f7c14b85;
-//         height: 100%;
-//         border: none;
-//         cursor: pointer;
-//       }
-//     }
-//   }
-// }
 
 
 
@@ -169,7 +52,7 @@
     justify-content: space-between;
 
     .top {
-      background-color: #f7c14b85;
+      background-color: hsl(124, 81%, 92%);;
       padding: 20px;
       font-weight: bold;
       display: flex;
@@ -214,7 +97,7 @@
 
         &.own {
           align-self: flex-end;
-          background-color: #f7c14b85;
+          background-color: #43a047;
         }
 
         span {
@@ -227,7 +110,7 @@
     }
 
     .bottom {
-      border-top: 2px solid #f7c14b85;
+      border-top: 2px solid #43a047;
       height: 60px;
       display: flex;
       align-items: center;
@@ -245,7 +128,7 @@
 
       button {
         flex: 1;
-        background-color: #f7c14b85;
+        background-color: #43a047;;
         height: 100%;
         border: none;
         cursor: pointer;
@@ -253,7 +136,7 @@
         transition: background 0.2s ease;
 
         &:hover {
-          background-color: #f7c14b;
+          background-color: #43a047;
         }
       }
     }
