--- a/client/src/components/searchBar/searchbar.scss
+++ b/client/src/components/searchBar/searchbar.scss
@@ -1,39 +1,47 @@
 @import "../../responsive.scss";
 
+$blue: #43a047;
+$green: #43a047;
+$gray: #6b7280;
+
 .searchBar {
   .type {
-
-
     button {
       padding: 16px 36px;
-      border: 1px solid #999;
+      border: 1px solid $blue;
       border-bottom: none;
       cursor: pointer;
       background-color: white;
       text-transform: capitalize;
+      color: $blue;
+      font-weight: 600;
+      transition: all 0.2s ease;
 
       &.active {
-        background-color: black;
+        background-color: $blue;
         color: white;
       }
 
       &:first-child {
-        border-top-left-radius: 5px;
+        border-top-left-radius: 8px;
         border-right: none;
       }
       &:last-child {
-        border-top-right-radius: 5px;
+        border-top-right-radius: 8px;
         border-left: none;
       }
     }
   }
 
   form {
-    border: 1px solid #999;
+    border: 1px solid $blue;
     display: flex;
     justify-content: space-between;
     height: 64px;
     gap: 5px;
+    background: white;
+    border-radius: 0 0 8px 8px;
+    overflow: hidden;
 
     @include sm {
       flex-direction: column;
@@ -44,37 +52,29 @@
       border: none;
       padding: 0px 10px;
       width: 200px;
+      outline: none;
 
       @include lg {
-        padding: 0px 5px;
-
         &:nth-child(2),
         &:nth-child(3) {
           width: 140px;
         }
       }
+
       @include md {
         width: 200px;
-        &:nth-child(2),
-        &:nth-child(3) {
-          width: 200px;
-        }
       }
 
-      @include sm{
+      @include sm {
         width: auto;
-        &:nth-child(2),
-        &:nth-child(3) {
-          width: auto;
-        }
         padding: 20px;
-        border: 1px solid #999;
+        border: 1px solid $gray;
       }
     }
 
-    a{
+    a {
       flex: 1;
-      background-color: #fece51;
+      background-color: $green;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -82,15 +82,16 @@
       button {
         border: none;
         cursor: pointer;
-        background-color: #fece51;
-        
-        @include sm{
-          padding: 10px;
-        }
-        
+        background-color: $green;
+        padding: 0 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
         img {
           width: 24px;
           height: 24px;
+          filter: brightness(0) invert(1);
         }
       }
     }
