--- a/client/src/routes/layout/layout.scss
+++ b/client/src/routes/layout/layout.scss
@@ -2,6 +2,7 @@
 
 .layout {
   height: 100vh;
+  width: 100%;
   max-width: 1366px;
   margin-left: auto;
   margin-right: auto;
@@ -9,6 +10,12 @@
   padding-right: 20px;
   display: flex;
   flex-direction: column;
+  overflow: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  
+
+
 
   @include lg {
     max-width: 1280px;
@@ -16,6 +23,7 @@
 
   @include md {
     max-width: 768px;
+    width:100vw;
   }
 
   @include sm {
@@ -24,5 +32,15 @@
 
   .content {
     height: calc(100vh - 100px);
+  }
+  .navbar {
+    width:1250px;
+    overflow: hidden;
+    margin:0 auto;
+
+    @include md {
+      width:98vw;
+      margin: 0 auto;
+    }
   }
 }
