--- a/client/src/routes/newPostPage/newPostPage.scss
+++ b/client/src/routes/newPostPage/newPostPage.scss
@@ -59,7 +59,7 @@
 
   .sideContainer {
     flex: 2;
-    background-color: #fcf5f3;
+    background-color: #eaf9ec;
     display: flex;
     flex-direction: column;
     gap: 20px;
